<resources>
    <string name="app_name">Eaters</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hello_blank_fragment">Erro: Fragmento Vazio</string>
    <!-- Strings related to login -->
    <string name="register">Registar</string>
    <string name="login">Entrar</string>
    <string name="password_hint">Palavra Passe</string>
    <string name="password_confirm_hint">Confirme a Palavra Passe</string>
    <string name="username_hint">Nome</string>
    <string name="address_hint">Morada</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rational">"Contacts permissions are needed for providing email completions."</string>


    <!-- Strings related to Main -->
    <string name="menuhome">Home</string>
    <string name="menubuscar">Buscar</string>
    <string name="menufavoritos">Favoritos</string>
    <string name="menucarrinho">Carrinho</string>
    <string name="menuperfil">Perfil</string>
    <string name="promolabel">Promoções:</string>
    <string name="menurestaurante">Restaurante X</string>

    <!-- Strings related to Pagamento -->
    <string name="pagamentoHeader">Formas de Pagamento</string>
    <string name="pagamentoText">Escolha uma das formas de pagamento aceitas por este estabelecimento.</string>

    <string name="actionButtonText">Finalizar Pedido</string>

    <!-- Strings related to Pedido -->
    <string name="pedidoConcluidoHeader">Pedido Concluido</string>
    <string name="pedidoConcluidoText">Obrigado pela compra</string>
    <string name="obs_hint">Coloque aqui Alergias ou Observações como Sem Cebola...</string>
    <string name="adicional">Adicional:</string>
    <string name="btn_add">Adicionar</string>
    <string name="food_obs_label">Observações:</string>
    <string name="preco_label">Preço:</string>
    <string name="profile_cupons">Cupons</string>
    <string name="profile_cupons_text">Meus cupons de desconto</string>
    <string name="profile_cards">Pagamentos</string>
    <string name="profile_cards_text">Minhas formas de pagamento</string>
    <string name="logout">Logout</string>
    <string name="adicional_unit_label">Valor por Unidade:</string>

    <string name="eurosymbol">€</string>


</resources>
