<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/pedido_itemfood"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/pedido_food_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/pedido_food_name"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/pedido_food_img"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/pedido_food_preco"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pedido_food_precolabel"
                app:layout_constraintTop_toBottomOf="@id/pedido_food_name"
                app:layout_constraintVertical_bias="0.0" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/pedido_food_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:layout_marginLeft="115dp"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pedido_img_star" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/pedido_img_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/pedido_food_img"
                app:layout_constraintTop_toBottomOf="@+id/pedido_food_name" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/pedido_food_nota"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/pedido_img_star"
                app:layout_constraintTop_toBottomOf="@+id/pedido_food_name" />

            <TextView
                android:id="@+id/pedido_food_precolabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:text="@string/preco_label"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/pedido_food_nota"
                app:layout_constraintTop_toBottomOf="@id/pedido_food_name" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/adicional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/adicional"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pedido_itemfood" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_adicional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adicional" />

    <TextView
        android:id="@+id/food_observacao_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_obs_label"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_adicional" />

    <EditText
        android:id="@+id/food_observacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/obs_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_observacao_label" />

    <Button
        android:id="@+id/btn_add"
        style="@android:style/Widget.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/btn_add"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_observacao" />
</android.support.constraint.ConstraintLayout>